<resources>
    <string name="app_name">YouTube Music Remote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">IP Address</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="next">Continue</string>
    <string name="toggle_mute">Toggle Mute</string>
    <string name="mute">Mute</string>
    <string name="unmute">Un-Mute</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="add_new_url">Add new Url</string>
    <string name="channel_name">Playback</string>
    <string name="connection_lost">Connection lost!</string>
    <string name="reconnect">Reconnect</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_lyrics">Lyrics</string>
    <string name="media_route_provider_service">MediaRoute Provider Service</string>
    <string name="custom_route_description">YouTube Remote</string>
    <string name="custom_route">YouTube Remote</string>
    <string name="settings">Settings</string>
    <string name="settings_use_rating_title">Rating in Notification</string>
    <string name="settings_use_rating_subtext">Use rating in Notification instead of repeat mode and shuffle.</string>
    <string name="settings_current_ip">Current IP</string>
    <string name="settings_current_url">Current URL</string>
    <string name="settings_app_version">App Version</string>
    <string name="settings_from_playstore">Installed from PlayStore</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="play_next">Play next</string>
    <string name="settings_use_custom_lock_screen_title">Custom Lockscreen</string>
    <string name="settings_use_custom_lock_screen_subtext">Use custom Lockscreen with music control</string>
    <string name="start_radio">Start radio</string>
    <string name="settings_custom_lock_screen_only_while_playing_title">Only while Playing</string>
    <string name="settings_custom_lock_screen_only_while_playing_subtext">Open custom Lockscreen only while music is Playing</string>
    <string name="settings_custom_lock_screen_visualize_audio_title">Visualize Audio</string>
    <string name="settings_custom_lock_screen_visualize_audio_subtext">Visualize audio on the bottom of the screen</string>
    <string name="settings_visualize_audio_title">Visualize Audio</string>
    <string name="settings_visualize_audio_subtext">Visualize Audio on top of Cover</string>
    <string name="settings_visualize_audio_size_title">Size of Visualizer</string>
    <string name="settings_visualize_audio_size_subtext">Band count 2^{{value}}</string>
    <string name="shuffle">Shuffle</string>
    <string name="show_all">Show all</string>
    <string name="settings_playlist_columns_title">Playlist Columns</string>
    <string name="settings_playlist_columns_subtext">Playlist Columns on search page ({{value}})</string>
    <string name="recent_activity">Recent activity</string>
    <string name="playlists">Playlists</string>
    <string name="cant_play_this">Can\'t play this item.</string>
    <string name="back">Back</string>
    <string name="settings_visualize_audio_mirror_bars_title">Mirror Bars</string>
    <string name="settings_visualize_audio_mirror_bars_subtext">Mirrors audio bars</string>
    <string name="settings_show_previous_songs_in_queue_title">Show Previous Songs in Queue</string>
    <string name="settings_show_previous_songs_in_queue_subtext">Shows the Previous played Songs in the Queue</string>
    <string name="settings_custom_lock_screen_brightness_title">Custom Brightness</string>
    <string name="settings_custom_lock_screen_brightness_subtext">Brightness {{value}}</string>
    <string name="settings_use_custom_lock_screen_brightness_title">Custom Lockscreen brightness</string>
    <string name="settings_use_custom_lock_screen_brightness_subtext">Use custom Lockscreen brightness</string>

    <string name="full">Full</string>
    <string name="charging_rapidly">Charging rapidly</string>
    <string name="charging">Charging</string>
    <string name="plugged">Plugged</string>
    <string name="discharging">Discharging</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="s">s</string>
    <string name="full_in">Full in</string>
</resources>