<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_close"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_toggle_mute"
        android:icon="@drawable/ic_volume"
        android:title="@string/toggle_mute" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/add_new_url"
        android:title="@string/add_new_url" />
    <item
        android:id="@+id/menu_queue"
        android:title="@string/menu_queue"
        android:visible="false" />
    <item
        android:id="@+id/menu_lyrics"
        android:title="@string/menu_lyrics"
        android:visible="false" />
</menu>